lib/src/compiler/tests/testdata/errors/30.out
error: unknown module `foo`
   ╭─[line:1:41]
   │
 1 │ import "test_proto2"import "test_proto3"import "foo"
   │                                         ──────┬─────  
   │                                               ╰─────── module `foo` not found
───╯
